refactoring of sound system