@@ -1,10 +1,11 @@
 package com.igormaznitsa.zxpoly.components.sound;
 
-import java.util.ArrayList;
+import static java.util.Arrays.stream;
+import static java.util.Objects.requireNonNull;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioSystem;
 import javax.sound.sampled.DataLine;
@@ -16,58 +17,73 @@ import javax.sound.sampled.SourceDataLine;
 public class SourceSoundPort implements Comparable<SourceSoundPort> {
   private final UUID uuid = UUID.randomUUID();
   private final String name;
+  private final Mixer.Info mixerInfo;
+  private final Line.Info lineInfo;
   private final Mixer mixer;
   private final Line line;
 
   public SourceSoundPort(
-          final Mixer mixer,
-          final String name,
-          final Line line
+      final Mixer mixer,
+      final String name,
+      final Line line
   ) {
     this.mixer = mixer;
     this.name = name;
     this.line = line;
+    this.mixerInfo = mixer == null ? null : mixer.getMixerInfo();
+    this.lineInfo = line == null ? null : line.getLineInfo();
+  }
+
+  private SourceSoundPort(
+      final Mixer.Info mixerInfo,
+      final Line.Info lineInfo,
+      final String name
+  ) {
+    this.mixerInfo = requireNonNull(mixerInfo, "mixerInfo");
+    this.lineInfo = requireNonNull(lineInfo, "lineInfo");
+    this.name = requireNonNull(name, "name");
+    this.mixer = null;
+    this.line = null;
   }
 
   public static List<SourceSoundPort> findForFormat(final AudioFormat format) {
-    final List<SourceSoundPort> result = new ArrayList<>();
-    final Mixer.Info[] mixers = AudioSystem.getMixerInfo();
-    for (final Mixer.Info mixerInfo : mixers) {
-      try (Mixer mixer = AudioSystem.getMixer(mixerInfo)) {
-        try {
-          mixer.open();
-        } catch (LineUnavailableException ex) {
-          continue;
-        }
-        final Line.Info[] sourceLineInfo = mixer.getSourceLineInfo();
-        for (final Line.Info lineInfo : sourceLineInfo) {
-          try {
-            final Line line = mixer.getLine(lineInfo);
-            if (line instanceof SourceDataLine) {
-              result.add(new SourceSoundPort(mixer,
-                      mixerInfo.getName() + ':' + line.getLineInfo().toString(), line));
-            }
-          } catch (LineUnavailableException ex) {
-            // DO NOTHING
-          }
-        }
-      }
-    }
+    requireNonNull(format, "format");
+    return stream(AudioSystem.getMixerInfo())
+        .map(SourceSoundPort::portsForMixer)
+        .flatMap(List::stream)
+        .filter(port -> port.doesSupport(format))
+        .sorted()
+        .toList();
+  }
 
-    return result.stream()
-            .sorted()
-            .filter(x -> x.doesSupport(format))
-            .collect(Collectors.toList());
+  private static List<SourceSoundPort> portsForMixer(final Mixer.Info mixerInfo) {
+    try {
+      final Mixer mixer = AudioSystem.getMixer(mixerInfo);
+      return stream(mixer.getSourceLineInfo())
+          .filter(SourceSoundPort::isSourceDataLineInfo)
+          .map(lineInfo -> new SourceSoundPort(
+              mixerInfo,
+              lineInfo,
+              mixerInfo.getName() + ':' + lineInfo))
+          .toList();
+    } catch (final Exception ex) {
+      return List.of();
+    }
+  }
+
+  private static boolean isSourceDataLineInfo(final Line.Info lineInfo) {
+    return SourceDataLine.class.isAssignableFrom(lineInfo.getLineClass());
   }
 
   public boolean doesSupport(final AudioFormat format) {
-    final Line.Info info = this.line.getLineInfo();
-    boolean result = false;
-    if (info instanceof DataLine.Info) {
-      result = Stream.of(((DataLine.Info) info).getFormats())
-              .anyMatch(format::matches);
+    final Line.Info info = this.lineInfo != null
+        ? this.lineInfo
+        : (this.line == null ? null : this.line.getLineInfo());
+    if (info instanceof DataLine.Info dataLineInfo) {
+      return dataLineInfo.isFormatSupported(format)
+          || Arrays.stream(dataLineInfo.getFormats()).anyMatch(format::matches);
     }
-    return result;
+    return false;
   }
 
   public UUID getUuid() {
@@ -79,7 +95,10 @@ public class SourceSoundPort implements Comparable<SourceSoundPort> {
   }
 
   public Mixer getMixer() {
-    return this.mixer;
+    if (this.mixer != null) {
+      return this.mixer;
+    }
+    return this.mixerInfo == null ? null : AudioSystem.getMixer(this.mixerInfo);
   }
 
   public Line getLine() {
@@ -92,11 +111,30 @@ public class SourceSoundPort implements Comparable<SourceSoundPort> {
   }
 
   @Override
-  public int compareTo(SourceSoundPort o) {
-    return this.name.compareTo(o.name);
+  public int compareTo(final SourceSoundPort that) {
+    return this.name.compareTo(that.name);
   }
 
   public SourceDataLine asSourceDataLine() {
-    return (SourceDataLine) this.line;
+    if (this.line instanceof SourceDataLine sourceDataLine) {
+      return sourceDataLine;
+    }
+    return this.obtainSourceDataLine();
+  }
+
+  private SourceDataLine obtainSourceDataLine() {
+    if (this.mixerInfo == null || this.lineInfo == null) {
+      throw new IllegalArgumentException("Sound port has no mixer line: " + this.name);
+    }
+    try {
+      final Mixer obtainedMixer = AudioSystem.getMixer(this.mixerInfo);
+      final Line obtainedLine = obtainedMixer.getLine(this.lineInfo);
+      if (obtainedLine instanceof SourceDataLine sourceDataLine) {
+        return sourceDataLine;
+      }
+      throw new IllegalArgumentException("Mixer line is not a SourceDataLine: " + this.name);
+    } catch (final LineUnavailableException ex) {
+      throw new IllegalArgumentException("Can't obtain source data line: " + ex.getMessage(), ex);
+    }
   }
 }
